fix theme error

--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
     <meta charset="UTF-8">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⏰</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>在线时钟 - 闹钟、计时器、秒表</title>
+    <title>在线时钟</title>
+    <script>
+      // 在页面加载前初始化主题，避免闪烁
+      (function() {
+        try {
+          const settings = JSON.parse(localStorage.getItem('clock-settings') || '{}');
+          const themeMode = settings.themeMode || 'auto';
+          let theme;
+          if (themeMode === 'auto') {
+            // 优先检测系统主题偏好
+            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+              theme = 'dark';
+            } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches) {
+              theme = 'light';
+            } else {
+              // 如果无法检测系统偏好，则根据时间判断
+              const hour = new Date().getHours();
+              theme = (hour >= 6 && hour < 18) ? 'light' : 'dark';
+            }
+          } else {
+            theme = themeMode;
+          }
+          document.documentElement.dataset.theme = theme;
+        } catch (e) {
+          document.documentElement.dataset.theme = 'light';
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
